kubernetes/apps/superset/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: superset
  labels:
    pod-security.kubernetes.io/enforce: baseline # due to bitnami postgresql
