kubernetes/apps/superset/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: superset
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
